syntax = "proto3";


package consignmentPackage;

import "google/protobuf/timestamp.proto";

service consignmentService {
    rpc buyAwb (buyAwbReq) returns(buyAwbRes);
    rpc getConsignmentTypes (getConsignmentTypesReq) returns (getConsignmentTypesRes);
    rpc newBooking (newBookingReq) returns(newBookingRes);
    rpc getTodaysBookings (getTodaysBookingsReq) returns (getTodaysBookingsRes);
    rpc deleteBooking (deleteBookingReq) returns (deleteBookingRes);
    rpc getBookingHistory(getBookingHistoryReq) returns (getBookingHistoryRes);
}

message buyAwbReq {
    int32 quantity=1;
    string awbPrefix=2;
    string id=3;
}

message buyAwbRes {
    string message=1;
    int32 status=2;
}

message newBookingReq {
    string awb = 1;
    string image = 2;
    int64 mobile = 3;
    string address = 4;
    int32 pincode = 5;
    int32 originPin = 6;
    bool isDoc = 7;
    string contentType = 8;
    double declaredValue = 9;
    string token = 10;
    string originAddress = 11;
}

message newBookingRes {
    string message=1;
    int32 status=2;
}




message getConsignmentTypesReq {}

message getConsignmentTypesRes {
    repeated getConsignmentType types = 1;
    int32 status = 2;
}
message getConsignmentType{
    string _id = 1;
    string typeName = 2; 
}



message getTodaysBookingsReq {
    int32 pincode = 1;
}

message getTodaysBookingsRes {
    repeated RecentBookings bookings = 1;
    int32 status = 2;
    string message = 3;
}
message RecentBookings {
    int32 awb = 1;
    string awbPrefix = 2;
    int32 destinationPin = 3;
    string type = 4;
    string bookingTime = 5;
    string _id = 6;
}


message deleteBookingReq {
    string id = 1; 
    string token = 2;
}

message deleteBookingRes {
    int32 status = 1;
    string message = 2;
}


message getBookingHistoryReq {
    int32 pincode = 1;
    string from = 2;
    string to = 3;
}

message getBookingHistoryRes {
    int32 status = 1;
    string message = 2;
    repeated BookingHistoryData data =3;
}
message BookingHistoryData {
    string awbPrefix = 1;
    int32 awb = 2;
    int32 destinationPin = 3;
    string type = 4;
    string bookingTime = 5;
    string status = 6;
}